tests/TestDeca/version1.1/src/test/deca/syntax/invalid/provided/multiline_in_println.deca

/*

This file test multiline 
in println function , it's an invalide test.

*/



{
    println("This is a
    multiline string");
}